added index.html from old site

--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my site</title>
+    <title>Dibyajyoti Deb's Homepage</title>
 </head>
 <body>
-    
-</body>
+    <div id="page">
+      <div id="header">
+        <h1><span style="font-family: Courier New;">Dibyajyoti Deb</span></h1>
+        <ul>
+          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/index.html">Home</a></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/Teaching.html">Teaching</a></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/Research.html">Research</a></span></li>
+          <li><span style="font-family: Century Gothic;"><span style="font-weight: normal;"><a
+
+                  href="/%7Edebd/Misc.html">Miscellaneous</a></span></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/Contact.html">Contact</a></span></li>
+        </ul>
+      </div>
+      <div id="main">
+        <div class="main_top">
+          <h1><span style="font-family: Century Gothic;"><span style="text-decoration: underline;">Home</span></span></h1>
+          <span style="font-family: Century Gothic;"> </span></div>
+        <span style="font-family: Century Gothic;"> </span>
+        <div class="main_body"><span style="font-family: Century Gothic;">Welcome
+            to my webpage. I am an Associate Professor of <a href="http://www.oit.edu/academics/degrees/applied-mathematics"
+
+              target="_blank">Mathematics</a> at the <a href="http://www.oit.edu"
+
+              target="_blank">Oregon Institute of Technology</a>. Please
+            navigate the tabs  <br />
+            above to know more about the courses that I am teaching this term,
+            and my other activities.</span><br />
+        </div>
+      </div>
+      <div id="footer"><br />
+      </div>
+    </div>
+  </body>
 </html>
