added teaching.html and updated index.html

--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
             </div>
           </div>
         <ul>
-          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/index.html">Home</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/Teaching.html">Teaching</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/Research.html">Research</a></span></li>
-          <li><span style="font-family: Century Gothic;"><span style="font-weight: normal;"><a
-
-                  href="/%7Edebd/Misc.html">Miscellaneous</a></span></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/%7Edebd/Contact.html">Contact</a></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/index.html">Home</a></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/Teaching.html">Teaching</a></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/Research.html">Research</a></span></li>
+          <li><span style="font-family: Century Gothic;"><span style="font-weight: normal;"><a href="/Misc.html">Miscellaneous</a></span></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/Contact.html">Contact</a></span></li>
         </ul>
       </div>
       
