--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           </div>
         <ul>
           <li><span style="font-family: Century Gothic;"><a href="/index.html">Home</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/Teaching.html">Teaching</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/Research.html">Research</a></span></li>
-          <li><span style="font-family: Century Gothic;"><span style="font-weight: normal;"><a href="/Misc.html">Miscellaneous</a></span></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/Contact.html">Contact</a></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/teaching.html">Teaching</a></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/research.html">Research</a></span></li>
+          <li><span style="font-family: Century Gothic;"><span style="font-weight: normal;"><a href="/misc.html">Miscellaneous</a></span></span></li>
+          <li><span style="font-family: Century Gothic;"><a href="/contact.html">Contact</a></span></li>
         </ul>
       </div>
       
