--- a/teaching.html
+++ b/teaching.html
@@ -17,7 +17,9 @@
           <li><span style="font-family: Century Gothic;"><a href="/research.html">MATH 310 - Mathematical Structures</a></span></li>
         </ul>
       </div>
-      
+      <br>
+      <br>
+      <span style="font-family: Century Gothic;"><a href="/earliercourses.html">Courses that I have taught before</a></span>
     </div>
   </body>
 </html>
