--- a/research.html
+++ b/research.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dibyajyoti Deb's Homepage - Teaching</title>
+    <title>Dibyajyoti Deb's Homepage - Research</title>
 </head>
 <body>
     <div id="page">
       <div id="header">
-        <h1><span style="font-family: Courier New;">DDeb/Teaching - Fall 2022</span></h1>
-        
+        <h1><span style="font-family: Courier New;">DDeb/Research</span></h1>
+        <div class="main_body"><span style="font-family: Century Gothic;">My
+            research interests are in number theory. More specifically my work
+            involves Diophantine equations, <span style="font-style: italic;">p</span>-adic
+            and algebraic number theory. <br />
+            I am also interested in the theory of Quadratic forms.<br />
+        </div>
         <ul>
           <li><span style="font-family: Century Gothic;"><a href="/index.html">MATH 251 - Differential Calculus</a></span></li>
           <li><span style="font-family: Century Gothic;"><a href="/teaching.html">MATH 253 - Sequences and Series</a></span></li>
