--- a/research.html
+++ b/research.html
@@ -15,6 +15,9 @@
             involves Diophantine equations, <span style="font-style: italic;">p</span>-adic
             and algebraic number theory. <br />
             I am also interested in the theory of Quadratic forms.<br />
+
+            <span style="font-weight: bold;">CV</span> (<a href="/Dibyajyoti_Deb-CV.pdf"
+              target="_blank">.pdf</a>)
         </div>
         <ul>
           <li><span style="font-family: Century Gothic;"><a href="/index.html">MATH 251 - Differential Calculus</a></span></li>
