--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
             research interests are in number theory. More specifically my work
             involves Diophantine equations, <span style="font-style: italic;">p</span>-adic
             and algebraic number theory. <br />
-            I am also interested in the theory of Quadratic forms.<br />
+            I am also interested in the theory of Quadratic forms.<br /><br />
             
             <span style="font-weight: bold;">CV(<a href="/Dibyajyoti_Deb-CV.pdf"
                 target="_blank">.pdf</a>)</span> 
