--- a/teaching.html
+++ b/teaching.html
@@ -12,11 +12,14 @@
         <h1><span style="font-family: Courier New;">DDeb/Teaching - Fall 2022</span></h1>
         
         <ul>
-          <li><span style="font-family: Century Gothic;"><a href="/index.html">MATH 251 - Differential Calculus</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/teaching.html">MATH 253 - Sequences and Series</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/research.html">MATH 310 - Mathematical Structures</a></span></li>
+          <li><span style="font-family: Century Gothic;">MATH 251 - Differential Calculus</span></li>
+          <li><span style="font-family: Century Gothic;">MATH 253 - Sequences and Series</span></li>
+          <li><span style="font-family: Century Gothic;">MATH 310 - Mathematical Structures</span></li>
         </ul>
       </div>
+      <br>
+      <br>
+      Check Canvas for course details and information.
       <br>
       <br>
       <span style="font-family: Century Gothic;"><a href="/earliercourses.html">Courses that I have taught before</a></span>
