--- a/teaching.html
+++ b/teaching.html
@@ -18,8 +18,7 @@
         </ul>
       </div>
       <br>
-      <br>
-      Check Canvas for course details and information.
+      <span style="font-family: Century Gothic;"></span>Check Canvas for course details and information.</span>
       <br>
       <br>
       <span style="font-family: Century Gothic;"><a href="/earliercourses.html">Courses that I have taught before</a></span>
