--- a/research.html
+++ b/research.html
@@ -20,12 +20,30 @@
                 target="_blank">.pdf</a>)</span> 
             
         </div>
-        
-        <ul>
-          <li><span style="font-family: Century Gothic;"><a href="/index.html">MATH 251 - Differential Calculus</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/teaching.html">MATH 253 - Sequences and Series</a></span></li>
-          <li><span style="font-family: Century Gothic;"><a href="/research.html">MATH 310 - Mathematical Structures</a></span></li>
-        </ul>
+        <br />
+            <span style="font-weight: bold; text-decoration: underline;">Publications</span><br />
+        <br />
+
+        <ol>
+            <li><span style="font-family: Century Gothic;"><span style="font-style: italic;"></span><a href="https://arxiv.org/abs/1709.01814" target="_blank"><span
+                    style="color: #0000ee;"></span></a><i>The 21 Card Trick and
+                  its Generalization</i>, <a target="_blank" href="https://arxiv.org/abs/1809.04072">arXiv.org:1809.04072</a></span></li>
+
+            <li><span style="font-family: Century Gothic;"><span style="font-style: italic;">On the <i>Diophantine</i> Equation p^x + p^y = z^(2n)</span>, <a
+                  href="https://arxiv.org/abs/1709.01814" target="_blank"><span
+                    style="color: #0000ee;">arXiv:1709.01814</span></a></span></li>
+
+            <li><span style="font-family: Century Gothic;">(with David Leep) <span style="font-style: italic;">The Poincaré series of a diagonal
+                  polynomial.</span>, Preprint, Abstract(<a target="_blank" href="http://math.oit.edu/%7Edebd/Research/abstractpoincare.pdf">.pdf</a>)</span></li>
+
+            <li><span style="font-family: Century Gothic;">(with David Leep) <span style="font-style: italic;">Powers in complete discrete
+                  valuation rings.</span>, Preprint, Abstract(<a target="_blank"
+                  href="http://math.oit.edu/%7Edebd/Research/abstractpowersdvr.pdf">.pdf</a>)</span></li>
+
+            <li><span style="font-family: Century Gothic;"> </span><span style="font-family: Century Gothic;"><span style="font-family: Century Gothic;"><span style="font-style: italic;">Diagonal
+                    forms and the rationality of the Poincaré series</span>,
+                  PhD. thesis, University of Kentucky, 2010.</span>     </span></li>
+          </ol>
       </div>
       <br>
       <br>
