--- a/misc.html
+++ b/misc.html
@@ -9,7 +9,7 @@
 <body>
     <div id="main">
         <div class="main_top">
-          <h1><span style="font-family: Century Gothic;"><span style="text-decoration: underline;">DDeb/Miscellaneous</span></span></h1>
+          <h1><span style="font-family: Courier New;"><span style="text-decoration: underline;">DDeb/Miscellaneous</span></span></h1>
           <span style="font-family: Century Gothic;"> </span></div>
         <span style="font-family: Century Gothic;"> </span>
         <div class="main_body">
