--- a/misc.html
+++ b/misc.html
@@ -10,21 +10,13 @@
     <div id="main">
         <div class="main_top">
           <h1><span style="font-family: Courier New;"><span style="text-decoration: underline;">DDeb/Miscellaneous</span></span></h1>
-          <span style="font-family: Century Gothic;"> </span></div>
-        <span style="font-family: Century Gothic;"> </span>
-        <div class="main_body">
-          <ul>
-          </ul>
-          <span style="font-family: Century Gothic;" id="l"><a href="AboutMe.html">About Me</a><br />
-          </span>
-          <ul>
-          </ul>
-          <span style="font-family: Century Gothic;"><span id="l"><a href="Interests.html">Interests</a></span></span><br />
-          <span style=" font-family: Century Gothic;"><span id="l"><br />
-            </span></span>
-          <ul>
-          </ul>
         </div>
+          <div class="main_body">
+            <ul>
+                <li><span style="font-family: Century Gothic;"><a href="aboutme.html">About Me</a></span></li>
+                <li><span style="font-family: Century Gothic;"><a href="interests.html">Interests</a></span></li>
+            </ul>
+          </div>
       </div>
 </body>
 </html>
