--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
           <h1><span style="font-family: Courier New;"><span style="text-decoration: underline;">DDeb/Contact</span></span></h1>
         </div>
           <div class="main_body"><span style="font-family: Century Gothic;">
-            <table>
+            <table border="5">
                 <tbody>
                 <tr>
                 <td>FALL 2022</td>
