--- a/contact.html
+++ b/contact.html
@@ -17,38 +17,27 @@
                 <tr>
                 <td>FALL 2022</td>
                 <td>9:00 - 10:00</td>
+                <td>10:00 - 11:00</td>
+                <td>11:00 - 12:00</td>
+                <td>12:00 - 1:00</td>
+                <td>1:00 - 2:00</td>
+                <td>2:00 - 3:00</td>
+                <td>3:00 - 4:00</td>
+                <td>4:00 - 5:00</td>
+                </tr>
+                <tr>
+                <td>Monday</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td>MATH 310</td>
+                <td>MATH 251</td>
+                <td>MATH 253</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 </tr>
                 <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                </tr>
-                <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                </tr>
-                <tr>
-                <td>&nbsp;</td>
+                <td>Tuesday</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -59,23 +48,34 @@
                 <td>&nbsp;</td>
                 </tr>
                 <tr>
+                <td>Wednesday/td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td>MATH 310</td>
+                <td>MATH 251</td>
+                <td>MATH 253</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 </tr>
                 <tr>
+                <td>Thursday</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>MATH 310</td>
+                <td>MATH 251</td>
+                <td>MATH 253</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
+                </tr>
+                <tr>
+                <td>Friday/td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td>MATH 310</td>
+                <td>MATH 251</td>
+                <td>MATH 253</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
