--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <table border="5">
                 <tbody>
                 <tr>
-                <td>FALL 2022</td>
+                <td><b>FALL 2022</b></td>
                 <td>9:00 - 10:00</td>
                 <td>10:00 - 11:00</td>
                 <td>11:00 - 12:00</td>
@@ -26,57 +26,57 @@
                 <td>4:00 - 5:00</td>
                 </tr>
                 <tr>
-                <td>Monday</td>
+                <td><b>Monday</b></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>MATH 310</td>
                 <td>MATH 251</td>
                 <td>MATH 253</td>
+                <td>Office Hours</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                </tr>
+                <tr>
+                <td><b>Tuesday</b></td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 </tr>
                 <tr>
-                <td>Tuesday</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                </tr>
-                <tr>
-                <td>Wednesday/td>
+                <td><b>Wednesday</b></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>MATH 310</td>
                 <td>MATH 251</td>
                 <td>MATH 253</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td>Office Hours</td>
+                <td>Office Hours</td>
                 <td>&nbsp;</td>
                 </tr>
                 <tr>
-                <td>Thursday</td>
+                <td><b>Thursday</b></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>MATH 310</td>
                 <td>MATH 251</td>
                 <td>MATH 253</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td>Meeting</td>
+                <td>Office Hours</td>
                 <td>&nbsp;</td>
                 </tr>
                 <tr>
-                <td>Friday/td>
+                <td><b>Friday</b></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>MATH 310</td>
                 <td>MATH 251</td>
                 <td>MATH 253</td>
-                <td>&nbsp;</td>
+                <td>Office Hours</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 </tr>
