--- a/aboutme.html
+++ b/aboutme.html
@@ -15,8 +15,7 @@
 
           target="_blank">Oregon Institute of Technology</a>.</span> <span
 
-        style="font-family: Century Gothic;">Before coming here, I was a <br />
-        Visiting Assistant Professor in the <a href="http://www.math.utoledo.edu"
+        style="font-family: Century Gothic;">Before coming here, I was a Visiting Assistant Professor in the <a href="http://www.math.utoledo.edu"
 
           target="_blank">Department of Mathematics</a> at the <a href="http://www.utoledo.edu"
 
@@ -28,10 +27,8 @@
 
           target="_blank">Prof. David Leep</a>. <br />
         My research interests are in Number Theory and Quadratic Forms. My
-        Ph.D. thesis was titled "Diagonal Forms and Rationality of the <br />
-        Poincaré Series", which, loosely speaking, is the study of the
-        number of solutions of a polynomial modulo powers of prime and the <br />
-        power series that it generates.<br />
+        Ph.D. thesis was titled "Diagonal Forms and Rationality of the Poincaré Series", which, loosely speaking, is the study of the
+        number of solutions of a polynomial modulo powers of prime and the power series that it generates.<br />
         <br />
         I did my undergraduate education -- B.S. (Hons.) in Mathematics from
         the <a href="http://www.cmi.ac.in" target="_blank">Chennai
