--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <td>MATH 251</td>
                 <td>MATH 253</td>
                 <td>Meeting</td>
-                <td>Office Hours</td>
+                <td>Meeting</td>
                 <td>&nbsp;</td>
                 </tr>
                 <tr>
@@ -77,7 +77,7 @@
                 <td>MATH 251</td>
                 <td>MATH 253</td>
                 <td>Office Hours</td>
-                <td>&nbsp;</td>
+                <td>Office Hours</td>
                 <td>&nbsp;</td>
                 </tr>
                 </tbody>
