fixed tikz images

--- a/html/knowl/p-28.html
+++ b/html/knowl/p-28.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Here we have just one point. As we mentioned in our “vague” definition, let's consider the small interval <span class="process-math">\([0, 0.1]\text{,}\)</span> and let's compute the average rate of change over this interval.</p>
-<span class="incontext"><a href="sec-rates_of_change.html#p-25" class="internal">in-context</a></span>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>We can now formally have a definition for the instantaneous rate of change and instantaneous velocity.</p>
+<span class="incontext"><a href="sec-rates_of_change.html#p-28" class="internal">in-context</a></span>
 </body>
 </html>
