--- a/html/handout-1.html
+++ b/html/handout-1.html
@@ -84,6 +84,7 @@ startup: {
 <li><a href="sec-rates_of_change.html#subsec-avg_velocity" data-scroll="subsec-avg_velocity" class="internal">Average Velocity</a></li>
 <li><a href="sec-rates_of_change.html#subsec-secant_lines" data-scroll="subsec-secant_lines" class="internal">Secant Lines</a></li>
 <li><a href="sec-rates_of_change.html#subsec-inst_rate_of_change" data-scroll="subsec-inst_rate_of_change" class="internal">Instataneous Rate of Change</a></li>
+<li><a href="sec-rates_of_change.html#subsec-tangent_lines" data-scroll="subsec-tangent_lines" class="internal">Tangent Lines</a></li>
 </ul>
 </li></ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
