--- a/html/knowl/solution-4-hidden.html
+++ b/html/knowl/solution-4-hidden.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math"><div class="solution solution-like">
-<p>Here we have just one point. As we mentioned in our “vague” definition, let's consider the small interval <span class="process-math">\([0, 0.1]\)</span>&gt;, and let's compute the average rate of change over this interval.</p>
+<p>Here we have just one point. As we mentioned in our “vague” definition, let's consider the small interval <span class="process-math">\([0, 0.1]\text{,}\)</span> and let's compute the average rate of change over this interval.</p>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{equation*}
 \frac{\Delta f}{\Delta x} \Bigg |_{[0, 0.1]} = \frac{-0.62-(-1)}{0.1-0}=\frac{0.38}{0.1} = 3.8
@@ -49,6 +49,6 @@
 <td class="c m b1 r1 l1 t0 lines"><span class="process-math">\([0, 0.00001]\)</span></td>
 <td class="c m b1 r1 l0 t0 lines"><span class="process-math">\(3.99998\)</span></td>
 </tr>
-</table></div></figure>
+</table></div></figure> The above table clearly shows that, as the intervals get smaller and smaller, the difference quotient <span class="process-math">\(\dfrac{\Delta f}{\Delta x}\)</span> gets closer to 4. This suggests that 4 is a good candidate for the instantaneous rate of change of the function <span class="process-math">\(f\)</span> at <span class="process-math">\(x=0\text{.}\)</span>
 </div></body>
 </html>
