--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 <td>MATH 253</td>
                 <td>Meeting</td>
                 <td>Meeting</td>
-                <td>&nbsp;</td>
+                <td>Math Colloquium</td>
                 </tr>
                 <tr>
                 <td><b>Friday</b></td>
