--- a/html/handout-1.html
+++ b/html/handout-1.html
@@ -76,9 +76,10 @@ startup: {
 </div>
 </div></nav></header><div class="page">
 <div id="sidebar-left" class="sidebar" role="navigation"><div class="sidebar-content">
-<nav id="toc"><ul><li class="link">
+<nav id="toc"><ul>
+<li class="link">
 <a href="sec-rates_of_change.html" data-scroll="sec-rates_of_change" class="internal"><span class="codenumber">1</span> <span class="title">Rates of Change</span></a><ul>
-<li><a href="sec-rates_of_change.html#subsec-performance_criteria" data-scroll="subsec-performance_criteria" class="internal">Performance Criteria</a></li>
+<li><a href="sec-rates_of_change.html#subsec-rc_performance_criteria" data-scroll="subsec-rc_performance_criteria" class="internal">Performance Criteria</a></li>
 <li><a href="sec-rates_of_change.html#subsec-average_rate_of_change" data-scroll="subsec-average_rate_of_change" class="internal">Average Rate of Change</a></li>
 <li><a href="sec-rates_of_change.html#subsec-avg_rate_of_change" data-scroll="subsec-avg_rate_of_change" class="internal">Average Rate of Change of a Function</a></li>
 <li><a href="sec-rates_of_change.html#subsec-avg_velocity" data-scroll="subsec-avg_velocity" class="internal">Average Velocity</a></li>
@@ -86,10 +87,19 @@ startup: {
 <li><a href="sec-rates_of_change.html#subsec-inst_rate_of_change" data-scroll="subsec-inst_rate_of_change" class="internal">Instataneous Rate of Change</a></li>
 <li><a href="sec-rates_of_change.html#subsec-tangent_lines" data-scroll="subsec-tangent_lines" class="internal">Tangent Lines</a></li>
 </ul>
-</li></ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
+</li>
+<li class="link">
+<a href="sec-limits.html" data-scroll="sec-limits" class="internal"><span class="codenumber">2</span> <span class="title">Limits</span></a><ul>
+<li><a href="sec-limits.html#subsec-limits_performance_criteria" data-scroll="subsec-limits_performance_criteria" class="internal">Performance Criteria</a></li>
+<li><a href="sec-limits.html#subsec-limit_def" data-scroll="subsec-limit_def" class="internal">Definition of a Limit</a></li>
+</ul>
+</li>
+</ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
-<main class="main"><div id="content" class="pretext-content"><section class="article" id="handout-1"><p class="byline">Dibyajyoti Deb</p>
-<nav class="summary-links"><ul><li><a href="sec-rates_of_change.html" class="internal"><span class="codenumber">1</span> <span class="title">Rates of Change</span></a></li></ul></nav></section></div></main>
+<main class="main"><div id="content" class="pretext-content"><section class="article" id="handout-1"><nav class="summary-links"><ul>
+<li><a href="sec-rates_of_change.html" class="internal"><span class="codenumber">1</span> <span class="title">Rates of Change</span></a></li>
+<li><a href="sec-limits.html" class="internal"><span class="codenumber">2</span> <span class="title">Limits</span></a></li>
+</ul></nav></section></div></main>
 </div>
 </body>
 </html>
