--- a/teaching.html
+++ b/teaching.html
@@ -9,12 +9,11 @@
 <body>
     <div id="page">
       <div id="header">
-        <h1><span style="font-family: Courier New;">DDeb/Teaching - Fall 2022</span></h1>
+        <h1><span style="font-family: Courier New;">DDeb/Teaching - Winter 2023</span></h1>
         
         <ul>
-          <li><span style="font-family: Century Gothic;">MATH 251 - Differential Calculus</span></li>
-          <li><span style="font-family: Century Gothic;">MATH 253 - Sequences and Series</span></li>
-          <li><span style="font-family: Century Gothic;">MATH 310 - Mathematical Structures</span></li>
+          <li><span style="font-family: Century Gothic;">MATH 252 - Integral Calculus</span></li>
+          <li><span style="font-family: Century Gothic;">MATH 321 - Applied Differential Equations I</span></li>
         </ul>
       </div>
       <span style="font-family: Century Gothic;">Check Canvas for course details and information.</span>
