--- a/my-website.html
+++ b/my-website.html
@@ -8,7 +8,12 @@
 <html lang="en-US">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Teaching</title>
+<title>Math Et al. <div class="displaymath process-math">
+\begin{equation*}
+\textit{Dibyajyoti Deb}
+\end{equation*}
+</div>
+</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="article">
@@ -179,7 +184,7 @@ window.MathJax = {
 <span id="theeye" class="motioncheck"></span>eye tracking - not yet</li>
 </ol>
 </li>
-</ol></div></button><span class="treebuttons"><a class="previous-button button" href="home.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="up-button button" href="my-website.html" title="Up"><span class="icon">^</span><span class="name">Up</span></a><a class="next-button button" href="research.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a></span><div class="searchbox"><div class="searchwidget">
+</ol></div></button><span class="treebuttons"><span class="previous-button button disabled"><span class="icon">&lt;</span><span class="name">Prev</span></span><span class="up-button button disabled"><span class="icon">^</span><span class="name">Up</span></span><a class="next-button button" href="home.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a></span><div class="searchbox"><div class="searchwidget">
 <input id="ptxsearch" type="text" name="terms" placeholder="Search" onchange="doSearch()"><button id="searchbutton" type="button" onclick="doSearch()">🔍</button>
 </div></div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(
 \newcommand{\lt}{&lt;}
@@ -191,7 +196,7 @@ window.MathJax = {
 <div class="ptx-page">
 <div id="ptx-sidebar"><nav id="ptx-toc" class="depth2"><ul class="structural">
 <li><div class="toc-item"><a href="home.html" class="internal"><span class="codenumber">1</span> <span class="title">Home</span></a></div></li>
-<li class="active">
+<li>
 <div class="toc-item"><a href="teaching.html" class="internal"><span class="codenumber">2</span> <span class="title">Teaching</span></a></div>
 <ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-fall2022" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
 </li>
@@ -214,20 +219,15 @@ window.MathJax = {
 <ul class="structural"><li><div class="toc-item"><a href="contact.html#subsec-fall2022" class="internal"><span class="codenumber">5.1</span> <span class="title">Schedule for Winter 2023</span></a></div></li></ul>
 </li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="teaching"><h2 class="heading hide-type">
-<span class="type">Section</span> <span class="codenumber">2</span> <span class="title">Teaching</span>
-</h2>
-<section class="subsection" id="subsec-fall2022"><h3 class="heading hide-type">
-<span class="type">Subsection</span> <span class="codenumber">2.1</span> <span class="title">Winter 2023</span>
-</h3>
-<div class="para" id="p-2">Classes that I'm teaching this term</div>
-<ol class="decimal">
-<li id="li-1"><div class="para" id="p-3">MATH 252 - Integral Calculus</div></li>
-<li id="li-2"><div class="para" id="p-4">MATH 321 - Applied Differential Equations I</div></li>
-</ol>
-<div class="para" id="p-5">Check Canvas for course details and information</div></section></section></div>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="article" id="my-website"><nav class="summary-links"><ul>
+<li><a href="home.html" class="internal"><span class="codenumber">1</span> <span class="title">Home</span></a></li>
+<li><a href="teaching.html" class="internal"><span class="codenumber">2</span> <span class="title">Teaching</span></a></li>
+<li><a href="research.html" class="internal"><span class="codenumber">3</span> <span class="title">Research</span></a></li>
+<li><a href="misc.html" class="internal"><span class="codenumber">4</span> <span class="title">Miscellaneous</span></a></li>
+<li><a href="contact.html" class="internal"><span class="codenumber">5</span> <span class="title">Contact</span></a></li>
+</ul></nav></section></div>
 <div class="ptx-content-footer">
-<a class="previous-button button" href="home.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="research.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a>
+<span class="previous-button button disabled"><span class="icon">&lt;</span><span class="name">Prev</span></span><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="home.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a>
 </div></main>
 </div>
 <div class="ptx-page-footer">
