Update pretext site

--- a/contact.html
+++ b/contact.html
@@ -64,11 +64,7 @@ window.MathJax = {
 <body class="pretext article ignore-math">
 <a class="assistive" href="#ptx-content">Skip to main content</a><header id="ptx-masthead"><div class="ptx-banner">
 <a id="logo-link" href=""></a><div class="title-container">
-<h1 class="heading"><a href="my-website.html"><span class="title">Math Et al. <div class="displaymath process-math">
-\begin{equation*}
-\textit{Dibyajyoti Deb}
-\end{equation*}
-</div></span></a></h1>
+<h1 class="heading"><a href="my-website.html"><span class="title">Math Et al.  <div class="para" id="p-1">Dibyajyoti Deb</div> </span></a></h1>
 <p class="byline"></p>
 </div>
 <div id="searchresultsplaceholder" style="display: none">
@@ -193,7 +189,7 @@ window.MathJax = {
 <li><div class="toc-item"><a href="home.html" class="internal"><span class="codenumber">1</span> <span class="title">Home</span></a></div></li>
 <li>
 <div class="toc-item"><a href="teaching.html" class="internal"><span class="codenumber">2</span> <span class="title">Teaching</span></a></div>
-<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-fall2022" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
+<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-winter2023" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
 </li>
 <li>
 <div class="toc-item"><a href="research.html" class="internal"><span class="codenumber">3</span> <span class="title">Research</span></a></div>
@@ -221,8 +217,8 @@ window.MathJax = {
 <span class="type">Subsection</span> <span class="codenumber">5.1</span> <span class="title">Schedule for Winter 2023</span>
 </h3>
 <div class="image-box" style="width: 100%; margin-left: 0%; margin-right: 0%;"><img src="external/schedule-winter2023.png" class="contained" alt="Winter 2023 Schedule"></div>
-<div class="para" id="p-74"><dfn class="terminology">Office - OW 115</dfn></div>
-<div class="para" id="p-75"><dfn class="terminology">Email - dibyajyoti.deb[at]oit[dot]edu</dfn></div></section></section></div>
+<div class="para" id="p-80"><dfn class="terminology">Office - OW 115</dfn></div>
+<div class="para" id="p-81"><dfn class="terminology">Email - dibyajyoti.deb[at]oit[dot]edu</dfn></div></section></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="misc.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon">&gt;</span></span>
 </div></main>
