--- a/teaching.html
+++ b/teaching.html
@@ -64,11 +64,7 @@ window.MathJax = {
 <body class="pretext article ignore-math">
 <a class="assistive" href="#ptx-content">Skip to main content</a><header id="ptx-masthead"><div class="ptx-banner">
 <a id="logo-link" href=""></a><div class="title-container">
-<h1 class="heading"><a href="my-website.html"><span class="title">Math Et al. <div class="displaymath process-math">
-\begin{equation*}
-\textit{Dibyajyoti Deb}
-\end{equation*}
-</div></span></a></h1>
+<h1 class="heading"><a href="my-website.html"><span class="title">Math Et al.  <div class="para" id="p-1">Dibyajyoti Deb</div> </span></a></h1>
 <p class="byline"></p>
 </div>
 <div id="searchresultsplaceholder" style="display: none">
@@ -193,7 +189,7 @@ window.MathJax = {
 <li><div class="toc-item"><a href="home.html" class="internal"><span class="codenumber">1</span> <span class="title">Home</span></a></div></li>
 <li class="active">
 <div class="toc-item"><a href="teaching.html" class="internal"><span class="codenumber">2</span> <span class="title">Teaching</span></a></div>
-<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-fall2022" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
+<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-winter2023" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
 </li>
 <li>
 <div class="toc-item"><a href="research.html" class="internal"><span class="codenumber">3</span> <span class="title">Research</span></a></div>
@@ -217,15 +213,23 @@ window.MathJax = {
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="teaching"><h2 class="heading hide-type">
 <span class="type">Section</span> <span class="codenumber">2</span> <span class="title">Teaching</span>
 </h2>
-<section class="subsection" id="subsec-fall2022"><h3 class="heading hide-type">
+<section class="subsection" id="subsec-winter2023"><h3 class="heading hide-type">
 <span class="type">Subsection</span> <span class="codenumber">2.1</span> <span class="title">Winter 2023</span>
 </h3>
-<div class="para" id="p-2">Classes that I'm teaching this term</div>
+<div class="para" id="p-3">Classes that I'm teaching this term</div>
 <ol class="decimal">
-<li id="li-1"><div class="para" id="p-3">MATH 252 - Integral Calculus</div></li>
-<li id="li-2"><div class="para" id="p-4">MATH 321 - Applied Differential Equations I</div></li>
+<li id="li-1"><div class="para" id="p-4">MATH 252 - Integral Calculus</div></li>
+<li id="li-2"><div class="para" id="p-5">MATH 321 - Applied Differential Equations I</div></li>
 </ol>
-<div class="para" id="p-5">Check Canvas for course details and information</div></section></section></div>
+<div class="para" id="p-6">Check Canvas for course details and information</div>
+<a href="" data-knowl="" class="id-ref hint-knowl original" data-refid="hk-hint-1" id="hint-1"><span class="type">Courses taught in the past</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-hint-1"><div class="hint solution-like"><div class="para logical" id="p-7"><ol class="decimal">
+<li id="li-3"><div class="para" id="p-8">
+<em class="alert">Oregon Institute of Technology (2013 - )</em> - Intermediate Algebra, College Algebra, Trigonometry, Differential Calculus, Integral Calculus, Sequences and Series, Vector Calculus I, II, Applied Differential Equations I, II, Linear Algebra I, II, Mathematical Structures, Introduction to Real Analysis, Number Theory, Discrete Mathematics, Applied PDE I, Numerical Methods I, II, III, Mathematical Statistics.</div></li>
+<li id="li-4"><div class="para" id="p-9">
+<em class="alert">University of Toledo (2010 - 2013)</em> - College Algebra, Trigonometry, Single Variable Calculus, Multivariable Calculus, Calculus for Life Sciences with Applications I, II, Calculus for Business with Applications II, Differential Equations, Honors Calculus II, Numerical Methods and Linear Algebra.</div></li>
+<li id="li-5"><div class="para" id="p-10">
+<em class="alert">University of Kentucky (2004 - 2010)</em> - College Algebra, Remedial College Algebra, Contemporary Mathematics, Calculus II, Multivariable Calculus, Business Calculus, Calculus for the Life Sciences, Ordinary Differential Equations.</div></li>
+</ol></div></div></div></section></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="home.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="research.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a>
 </div></main>
