--- a/my-website.html
+++ b/my-website.html
@@ -8,12 +8,7 @@
 <html lang="en-US">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Math Et al. <div class="displaymath process-math">
-\begin{equation*}
-\textit{Dibyajyoti Deb}
-\end{equation*}
-</div>
-</title>
+<title>Math Et al.  <div class="para" id="p-1">Dibyajyoti Deb</div> </title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="article">
@@ -69,11 +64,7 @@ window.MathJax = {
 <body class="pretext article ignore-math">
 <a class="assistive" href="#ptx-content">Skip to main content</a><header id="ptx-masthead"><div class="ptx-banner">
 <a id="logo-link" href=""></a><div class="title-container">
-<h1 class="heading"><a href="my-website.html"><span class="title">Math Et al. <div class="displaymath process-math">
-\begin{equation*}
-\textit{Dibyajyoti Deb}
-\end{equation*}
-</div></span></a></h1>
+<h1 class="heading"><a href="my-website.html"><span class="title">Math Et al.  <div class="para" id="p-1">Dibyajyoti Deb</div> </span></a></h1>
 <p class="byline"></p>
 </div>
 <div id="searchresultsplaceholder" style="display: none">
@@ -198,7 +189,7 @@ window.MathJax = {
 <li><div class="toc-item"><a href="home.html" class="internal"><span class="codenumber">1</span> <span class="title">Home</span></a></div></li>
 <li>
 <div class="toc-item"><a href="teaching.html" class="internal"><span class="codenumber">2</span> <span class="title">Teaching</span></a></div>
-<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-fall2022" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
+<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-winter2023" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
 </li>
 <li>
 <div class="toc-item"><a href="research.html" class="internal"><span class="codenumber">3</span> <span class="title">Research</span></a></div>
