--- a/teaching.html
+++ b/teaching.html
@@ -222,18 +222,24 @@ window.MathJax = {
 <li id="li-2"><div class="para" id="p-5">MATH 321 - Applied Differential Equations I</div></li>
 </ol>
 <div class="para" id="p-6">Check Canvas for course details and information</div>
-<a href="" data-knowl="" class="id-ref hint-knowl original" data-refid="hk-hint-1" id="hint-1"><span class="type">Courses taught in the past</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-hint-1"><div class="hint solution-like"><div class="para logical" id="p-7"><ol class="decimal">
-<li id="li-3"><div class="para" id="p-8">
+<div class="para" id="p-7">
+<a href="" data-knowl="" class="id-ref hint-knowl original" data-refid="hk-hint-1" id="hint-1"><span class="type">Courses taught in the past</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-hint-1"><div class="hint solution-like"><div class="para logical" id="p-8"><ol class="decimal">
+<li id="li-3"><div class="para" id="p-9">
 <em class="alert">Oregon Institute of Technology (2013 - )</em> - Intermediate Algebra, College Algebra, Trigonometry, Differential Calculus, Integral Calculus, Sequences and Series, Vector Calculus I, II, Applied Differential Equations I, II, Linear Algebra I, II, Mathematical Structures, Introduction to Real Analysis, Number Theory, Discrete Mathematics, Applied PDE I, Numerical Methods I, II, III, Mathematical Statistics.</div></li>
-<li id="li-4"><div class="para" id="p-9">
+<li id="li-4"><div class="para" id="p-10">
 <em class="alert">University of Toledo (2010 - 2013)</em> - College Algebra, Trigonometry, Single Variable Calculus, Multivariable Calculus, Calculus for Life Sciences with Applications I, II, Calculus for Business with Applications II, Differential Equations, Honors Calculus II, Numerical Methods and Linear Algebra.</div></li>
-<li id="li-5"><div class="para" id="p-10">
+<li id="li-5"><div class="para" id="p-11">
 <em class="alert">University of Kentucky (2004 - 2010)</em> - College Algebra, Remedial College Algebra, Contemporary Mathematics, Calculus II, Multivariable Calculus, Business Calculus, Calculus for the Life Sciences, Ordinary Differential Equations.</div></li>
-</ol></div></div></div></section></section></div>
+</ol></div></div></div>
+</div></section></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="home.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="research.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a>
 </div></main>
 </div>
-
+<div class="ptx-page-footer">
+<a class="pretext-link" href="https://pretextbook.org"><div class="name">Authored in PreTeXt</div>
+<div class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="338 3000 8772 6866"><g style="stroke-width:.025in; stroke:black; fill:none"><polyline points="472,3590 472,9732 " style="stroke:#000000;stroke-width:174; stroke-linejoin:miter; stroke-linecap:round; "></polyline><path style="stroke:#000000;stroke-width:126;stroke-linecap:butt;" d="M 4724,9448 A 4660 4660  0  0  1  8598  9259 "></path><path style="stroke:#000000;stroke-width:174;stroke-linecap:butt;" d="M 4488,9685 A 4228 4228  0  0  0  472  9732 "></path><path style="stroke:#000000;stroke-width:126;stroke-linecap:butt;" d="M 4724,3590 A 4241 4241  0  0  1  8598  3496 "></path><path style="stroke:#000000;stroke-width:126;stroke-linecap:round;" d="M 850,3496 A 4241 4241  0  0  1  4724  3590 "></path><path style="stroke:#000000;stroke-width:126;stroke-linecap:round;" d="M 850,9259 A 4507 4507  0  0  1  4724  9448 "></path><polyline points="5385,4299 4062,8125 " style="stroke:#000000;stroke-width:300; stroke-linejoin:miter; stroke-linecap:round; "></polyline><polyline points="8598,3496 8598,9259 " style="stroke:#000000;stroke-width:126; stroke-linejoin:miter; stroke-linecap:round; "></polyline><polyline points="850,3496 850,9259 " style="stroke:#000000;stroke-width:126; stroke-linejoin:miter; stroke-linecap:round; "></polyline><polyline points="4960,9685 4488,9685 " style="stroke:#000000;stroke-width:174; stroke-linejoin:miter; stroke-linecap:round; "></polyline><polyline points="3070,4582 1889,6141 3070,7700 " style="stroke:#000000;stroke-width:300; stroke-linejoin:miter; stroke-linecap:round; "></polyline><polyline points="6418,4582 7600,6141 6418,7700 " style="stroke:#000000;stroke-width:300; stroke-linejoin:miter; stroke-linecap:round; "></polyline><polyline points="8976,3590 8976,9732 " style="stroke:#000000;stroke-width:174; stroke-linejoin:miter; stroke-linecap:round; "></polyline><path style="stroke:#000000;stroke-width:174;stroke-linecap:butt;" d="M 4960,9685 A 4228 4228  0  0  1  8976  9732 "></path></g></svg></div></a><a class="runestone-link" href="https://runestone.academy"><div class="name">Powered by Runestone</div>
+<img class="logo" title="Powered by Runestone" src="https://runestone.academy/runestone/static/rectangle_badge.png" alt="Powered by Runestone"></a><a class="mathjax-logo" href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a>
+</div>
 </body>
 </html>
