update with new speakers

--- a/html/contact.html
+++ b/html/contact.html
@@ -222,5 +222,7 @@ window.MathJax = {
 <div class="ptx-content-footer">
 <a class="previous-button button" href="misc.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon">&gt;</span></span>
 </div></main>
+</div>
+
 </body>
 </html>
