--- a/html/teaching.html
+++ b/html/teaching.html
@@ -235,5 +235,6 @@ window.MathJax = {
 <div class="ptx-content-footer">
 <a class="previous-button button" href="home.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="research.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a>
 </div></main>
+</div>
 </body>
 </html>
