updated colloquium speaker

--- a/research.html
+++ b/research.html
@@ -330,8 +330,14 @@ window.MathJax = {
 <em class="alert">Jason Smith, Dept. of Mathematics</em> - Iteratively Counting Edges to Sum Squares and Cubes, November 9, 2022.</div></li>
 <li id="li-50"><div class="para" id="p-71">
 <em class="alert">Su Jin Lee, Dept. of Geomatics</em> - Introduction to GIS, December 7, 2022.</div></li>
-</ol></div> <dfn class="terminology">Winter 2023</dfn> <div class="para logical" id="p-72"><ol class="decimal"><li id="li-51"><div class="para" id="p-73">
-<em class="alert">Kenneth Davis, Dept. of Mathematics</em> - Fair Division and the Problem of Redistricting, February 8, 2023.</div></li></ol></div>
+</ol></div> <dfn class="terminology">Winter 2023</dfn> <div class="para logical" id="p-72"><ol class="decimal">
+<li id="li-51"><div class="para" id="p-73">
+<em class="alert">Kenneth Davis, Dept. of Mathematics</em> - Fair Division and the Problem of Redistricting, February 8, 2023.</div></li>
+<li id="li-52"><div class="para" id="p-74">
+<em class="alert">Jesse Kinder (Dept. of Natural Sciences), Kim Kinder (M.D.)</em> - What is a Quantum Computer?, February 22, 2023.</div></li>
+<li id="li-53"><div class="para" id="p-75">
+<em class="alert">Tiernan Fogarty, Dept. of Mathematics</em> - Modeling the hanging beam in a first term differential equations course, March 15, 2023.</div></li>
+</ol></div>
 </div></div>
 </div>
           </div></section></section><div class="hidden-content tex2jax_ignore" id="hk-fn-3"><div class="fn"><code class="code-inline tex2jax_ignore">ddebmath.github.io/Dibyajyoti_Deb-CV.pdf</code></div></div>
