--- a/research.html
+++ b/research.html
@@ -334,9 +334,16 @@ window.MathJax = {
 <li id="li-51"><div class="para" id="p-73">
 <em class="alert">Kenneth Davis, Dept. of Mathematics</em> - Fair Division and the Problem of Redistricting, February 8, 2023.</div></li>
 <li id="li-52"><div class="para" id="p-74">
-<em class="alert">Jesse Kinder (Dept. of Natural Sciences), Kim Kinder (M.D.)</em> - What is a Quantum Computer?, February 22, 2023.</div></li>
+<em class="alert">Jesse Kinder, Dept. of Natural Sciences</em> - What is a Quantum Computer?, February 22, 2023.</div></li>
 <li id="li-53"><div class="para" id="p-75">
 <em class="alert">Tiernan Fogarty, Dept. of Mathematics</em> - Modeling the hanging beam in a first term differential equations course, March 15, 2023.</div></li>
+</ol></div> <dfn class="terminology">Spring 2023</dfn> <div class="para logical" id="p-76"><ol class="decimal">
+<li id="li-54"><div class="para" id="p-77">
+<em class="alert">Terri Torres, Dept. of Mathematics</em> - Honey Bee Research with Students at Oregon Tech, April 26, 2023.</div></li>
+<li id="li-55"><div class="para" id="p-78">
+<em class="alert">Joseph Reid, Dept. of Mathematics</em> - Minimize Your Writing Stress: Tools for Efficient and Reproducible Research, May 10, 2023.</div></li>
+<li id="li-56"><div class="para" id="p-79">
+<em class="alert">Ashton Greer, Dept. of Civil Engineering</em> - Rainfall Roulette: Climate Change and the Shifting Rainfall Patterns in Stormwater Infrastructure Design, May 31, 2023.</div></li>
 </ol></div>
 </div></div>
 </div>
