--- a/teaching.html
+++ b/teaching.html
@@ -218,8 +218,8 @@ window.MathJax = {
 </h3>
 <div class="para" id="p-3">Classes that I'm teaching this term</div>
 <ol class="decimal">
-<li id="li-1"><div class="para" id="p-4">MATH 252 - Integral Calculus</div></li>
-<li id="li-2"><div class="para" id="p-5">MATH 321 - Applied Differential Equations I</div></li>
+<li id="li-1"><div class="para" id="p-4">MATH 254 - Vector Calculus I</div></li>
+<li id="li-2"><div class="para" id="p-5">MATH 341 - Linear Algebra I</div></li>
 </ol>
 <div class="para" id="p-6">Check Canvas for course details and information</div>
 <div class="para" id="p-7">
