--- a/teaching.html
+++ b/teaching.html
@@ -214,7 +214,7 @@ window.MathJax = {
 <span class="type">Section</span> <span class="codenumber">2</span> <span class="title">Teaching</span>
 </h2>
 <section class="subsection" id="subsec-winter2023"><h3 class="heading hide-type">
-<span class="type">Subsection</span> <span class="codenumber">2.1</span> <span class="title">Winter 2023</span>
+<span class="type">Subsection</span> <span class="codenumber">2.1</span> <span class="title">Spring 2024</span>
 </h3>
 <div class="para" id="p-3">Classes that I'm teaching this term</div>
 <ol class="decimal">
