--- a/home.html
+++ b/home.html
@@ -189,7 +189,7 @@ window.MathJax = {
 <li class="active"><div class="toc-item"><a href="home.html" class="internal"><span class="codenumber">1</span> <span class="title">Home</span></a></div></li>
 <li>
 <div class="toc-item"><a href="teaching.html" class="internal"><span class="codenumber">2</span> <span class="title">Teaching</span></a></div>
-<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-winter2023" class="internal"><span class="codenumber">2.1</span> <span class="title">Winter 2023</span></a></div></li></ul>
+<ul class="structural"><li><div class="toc-item"><a href="teaching.html#subsec-winter2023" class="internal"><span class="codenumber">2.1</span> <span class="title">Spring 2024</span></a></div></li></ul>
 </li>
 <li>
 <div class="toc-item"><a href="research.html" class="internal"><span class="codenumber">3</span> <span class="title">Research</span></a></div>
@@ -207,7 +207,7 @@ window.MathJax = {
 </li>
 <li>
 <div class="toc-item"><a href="contact.html" class="internal"><span class="codenumber">5</span> <span class="title">Contact</span></a></div>
-<ul class="structural"><li><div class="toc-item"><a href="contact.html#subsec-fall2022" class="internal"><span class="codenumber">5.1</span> <span class="title">Schedule for Winter 2023</span></a></div></li></ul>
+<ul class="structural"><li><div class="toc-item"><a href="contact.html#subsec-fall2022" class="internal"><span class="codenumber">5.1</span> <span class="title">Schedule for Spring 2024</span></a></div></li></ul>
 </li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content">
